--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Заголовок</title>
+	<title>Cryptopayz</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
@@ -27,7 +27,7 @@
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <a class="navbar-brand" href="#">
-                            <img src="images/logo.png" />
+                            <img src="images/logo.png" alt="Cryptopayz" />
                         </a>
                     </div>
                     <div class="head-btns"><a class="log_in" href="#">Log In</a><a href="#" class="sign_up">Sign Up</a></div>
@@ -253,6 +253,7 @@
 						<img src="img/integration-img3.png" alt="">
 						<img src="img/integration-img4.png" alt="">
 						<img src="img/integration-img5.png" alt="">
+						<img src="img/integration-img-bg.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -324,11 +325,11 @@ Fastest sending and receiving payments using QR code scanner.</p>
 							</div>
 							<div class="currenci">
 								<div class="currenci-icon"></div>
-								<p>Steem</p>
+								<p>Power Ledger</p>
 							</div>
 							<div class="currenci">
 								<div class="currenci-icon"></div>
-								<p>Peercoin</p>
+								<p>Neo</p>
 							</div>
 							<div class="currenci">
 								<div class="currenci-icon"></div>
@@ -336,11 +337,11 @@ Fastest sending and receiving payments using QR code scanner.</p>
 							</div>
 							<div class="currenci">
 								<div class="currenci-icon"></div>
-								<p>Decred</p>
+								<p>Lisk</p>
 							</div>
 							<div class="currenci">
 								<div class="currenci-icon"></div>
-								<p>Bitcoin</p>
+								<p>Bitcoin Gold</p>
 							</div>
 						</div>
 					</div>
@@ -474,7 +475,7 @@ Fastest sending and receiving payments using QR code scanner.</p>
 		<footer>
 			<div class="footer-content">
 				<div class="logo-wrap">
-					<a href=""><img src="img/foot-logo.png" alt=""></a>
+					<a href=""><img src="img/foot-logo.png" alt="Cryptopayz"></a>
 				</div>
 				<div class="links-wrap">
 					<div class="links-item">
